Prepared Email Notification Functionality

--- a/Changeling/Changeling.csproj
+++ b/Changeling/Changeling.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Cswatcher.cs" />
     <Compile Include="DbConn.cs" />
     <Compile Include="ICswatcher.cs" />
+    <Compile Include="mailer.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
